[workspace]
members = [
    "vineyard",
    "vineyard-datafusion",
    "vineyard-polars",
    "vineyard-integration-testing",
]
resolver = "2"

[workspace.package]
version = "0.18.1"
homepage = "https://v6d.io"
repository = "https://github.com/v6d-io/v6d.git"
authors = ["Vineyard <vineyard@alibaba-inc.com>"]
license = "Apache-2.0"
keywords = ["vineyard"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2021"
readme = "README.md"

[workspace.dependencies]
arrow-array = ">=40, <45"
arrow-buffer = ">=40, <45"
arrow-ipc = ">=40, <45"
arrow-schema = ">=40, <45"
arrow2 = { version = ">=0.17, <0.18", features = ["arrow"] }
ctor = "0.2"
datafusion = ">= 28"
downcast-rs = "1.2"
env_logger = "0.9"
futures = "0.3"
gensym = "0.1"
inline-python = "0.12"
itertools = "0.11"
lazy_static = "1"
log = "0.4"
memmap2 = "0.7"
num-traits = ">= 0.2"
num-derive = ">= 0.4"
parking_lot = "0.12"
polars-arrow = ">=0.32, <34"
polars-core = ">=0.32, <34"
rand = "0.8"
sendfd = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
spectral = "0.6"
static_str_ops = "0.1.2"

vineyard = { version = "0.18.1", path = "./vineyard" }
vineyard-datafusion = { version = "0.18.1", path = "./vineyard-datafusion" }
vineyard-polars = { version = "0.18.1", path = "./vineyard-polars" }
vineyard-integration-testing = { version = "0.18.1", path = "./vineyard-integration-testing" }
